  to Iain Lea
- Fixed "ignore IPs". Only the first value was taken into
  account. Thanks to Adrien Clerc
- Moved socket to /var/run/fail2ban.
- Rewrote the communication server.
- Refactoring. Reduced number of files.
- Removed Python 2.4. Minimum required version is now Python
  2.3.
- New log rotation detection algorithm.
- Print monitored files in status.

ver. 0.8.1 (2007/08/14) - stable
----------
- Fixed vulnerability in sshd.conf. Thanks to Daniel B. Cid
- Expand <HOST> in ignoreregex. Thanks to Yaroslav Halchenko
- Improved regular expressions. Thanks to Yaroslav Halchenko
  and others
- Added sendmail actions. The action started with "mail" are
  now deprecated. Thanks to Raphaël Marichez
- Added "ignoreregex" support to fail2ban-regex
- Updated suse-initd and added it to MANIFEST. Thanks to
  Christian Rauch
- Tightening up the pid check in redhat-initd. Thanks to
  David Nutter
- Added webmin authentication filter. Thanks to Guillaume
  Delvit
- Removed textToDns() which is not required anymore. Thanks
  to Yaroslav Halchenko
- Added new action iptables-allports. Thanks to Yaroslav
  Halchenko
- Added "named" date format to date detector. Thanks to
  Yaroslav Halchenko
- Added filter file for named (bind9). Thanks to Yaroslav
  Halchenko
- Fixed vsftpd filter. Thanks to Yaroslav Halchenko

ver. 0.8.0 (2007/05/03) - stable
----------
- Fixed RedHat init script. Thanks to Jonathan Underwood
- Added Solaris 10 files. Thanks to Hanno 'Rince' Wagner

ver. 0.7.9 (2007/04/19) - release candidate
----------
- Close opened handlers. Thanks to Yaroslav Halchenko
- Fixed "reload" bug. Many many thanks to Yaroslav Halchenko
- Added date format for asctime without year
- Modified filters config. Thanks to Michael C. Haller
- Fixed a small bug in mail-buffered.conf

ver. 0.7.8 (2007/03/21) - release candidate
----------
- Fixed asctime pattern in datedetector.py
- Added new filters/actions. Thanks to Yaroslav Halchenko